[package]
name = "zksync-methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.0.1", optional = true }
sp1-helper = { version = "1.1.0", optional = true }

[package.metadata.risc0]
methods = ["risc0_guest"]

[features]
default = ["risc0"]
sp1 = ["sp1-helper"]
risc0 = ["risc0-build"]