[package]
name = "zksync-methods"
version.workspace = true
edition = "2021"

[build-dependencies]
risc0-build = { version = "1.0.1", optional = true }
sp1-build = { version = "3.4.0", optional = true }
risc0-build-ethereum = { version = "1.0.1", optional = true }

[package.metadata.risc0]
methods = ["risc0-guest"]

[features]
# default = ["risc0"]
sp1 = ["sp1-build"]
risc0 = ["risc0-build" ,"risc0-build-ethereum"]
