[package]
name = "nexus_runtime"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "1.0.1", default-features = false, features = ["std"] }
nexus-core = { path = "../../../core", default-features = false, features = ["zkvm"]}
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", optional = true}
serde = "1.0.196"

[features]
spone = ["sp1-zkvm"]