[package]
name = "nexus_runtime"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "1.0.1", default-features = false, features = ["std"] }
nexus-core = { path = "../../../core", default-features = false, features = ["zkvm-risc0"]}
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", optional = true}

[features]
sp1 = ["sp1-zkvm"]
