[package]
name = "nexus_runtime"
version.workspace = true
edition = "2021"

[dependencies]
# If you want to try (experimental) std support, add `features = [ "std" ]` to risc0-zkvm
risc0-zkvm = { version = "1.1.1", default-features = false, features = ["std"] }
nexus-core = { path = "../../../core", default-features = false, features = [
  "zkvm-risc0",
] }
risc0-zkvm-platform = { version = "1.2.0" , features = ["sys-getenv"] }